<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_100sdp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            >
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cr_er_un_dossier"
                android:textStyle="bold"
                android:textSize="@dimen/_11ssp"
                android:layoutDirection="locale"
                android:textColor="@color/sea_blue"
                app:layout_constraintBottom_toTopOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <EditText
                android:id="@+id/et_new_folder_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_de_dossier"
                android:textSize="@dimen/_10ssp"
                android:layoutDirection="locale"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:strokeColor="@color/black"
                app:strokeWidth="0.5dp"
                app:cornerRadius="6dp"
                android:text="@string/annuler"
                android:textSize="@dimen/_7ssp"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_new_folder_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_create_folder"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_create_folder"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="wrap_content"
                android:text="@string/cr_er"
                android:textAllCaps="false"
                app:cornerRadius="6dp"
                android:textSize="@dimen/_7ssp"
                android:backgroundTint="@color/sea_blue"
                app:layout_constraintStart_toEndOf="@id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@id/et_new_folder_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>