<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/layout_science_calculate_table"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:id="@+id/tl_grades_table"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">
        <TableRow
            android:paddingVertical="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_constant"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/matière"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white_constant"
                android:gravity="center"
                android:text="@string/coefficient"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white_constant"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/note"/>
        </TableRow>
        <TableRow
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/normal_title_font"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/science"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="6"/>
            <EditText
                android:id="@+id/et_science"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_2sdp"
                android:maxLength="5"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:maxLines="1"
                android:autoSizeTextType="uniform"
                android:autoSizeMaxTextSize="@dimen/_12ssp"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/normal_title_font"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/physique"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:text="5"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_physique"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/_0_0"
                android:padding="@dimen/_2sdp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:gravity="center"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                />


        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/normal_title_font"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/math"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/table_cell_backg"
                android:text="5"/>

            <EditText
                android:id="@+id/et_math"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/_0_0"
                android:padding="@dimen/_2sdp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:gravity="center"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:text=""/>

        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/normal_title_font"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/arabe"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="3"/>

            <EditText
                android:id="@+id/et_arabe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:padding="@dimen/_2sdp"
                android:gravity="center"
                android:hint="@string/_0_0"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:text=""/>

        </TableRow>
        <TableRow>
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/normal_title_font"
                android:textStyle="bold"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/francais"/>

            <TextView
                android:layout_width="wrap_content"
                android:background="@drawable/table_cell_backg"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="2"/>
            <EditText
                android:id="@+id/et_francais"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="5"
                android:gravity="center"
                android:maxLines="1"
                android:hint="@string/_0_0"
                android:inputType="numberDecimal"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/normal_title_font"
                android:textStyle="bold"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/anglais"/>

            <TextView
                android:layout_width="wrap_content"
                android:background="@drawable/table_cell_backg"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="2"/>

            <EditText
                android:id="@+id/et_anglais"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="5"
                android:hint="@string/_0_0"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:fontFamily="@font/normal_title_font"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/philo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="2"/>
            <EditText
                android:id="@+id/et_philo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="5"
                android:gravity="center"
                android:hint="@string/_0_0"
                android:padding="@dimen/_2sdp"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/normal_title_font"
                android:textStyle="bold"
                android:background="@drawable/table_cell_backg"
                android:gravity="center_vertical"
                android:text="@string/histoire_geo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="2"/>
            <EditText
                android:id="@+id/et_his_geo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_2sdp"
                android:hint="@string/_0_0"
                android:background="@drawable/table_cell_backg"
                android:maxLength="5"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:maxLines="1"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/table_cell_backg"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/normal_title_font"
                    android:gravity="center_vertical"
                    android:text="@string/tamazight"/>
                <CheckBox
                    android:id="@+id/cb_tamazight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:buttonTint="@color/black"
                    />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/table_cell_backg"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="2"/>

            <EditText
                android:id="@+id/et_tamazight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="@dimen/_2sdp"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:hint="@string/_0_0"
                android:gravity="center"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:background="@drawable/table_cell_backg"
                android:fontFamily="@font/normal_title_font"
                android:gravity="center_vertical"
                android:text="@string/s_islamique"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:background="@drawable/table_cell_backg"
                android:textStyle="bold"
                android:text="2"/>
            <EditText
                android:id="@+id/et_s_islamique"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="5"
                android:padding="@dimen/_2sdp"
                android:hint="@string/_0_0"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp"
                android:background="@drawable/table_cell_backg"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:fontFamily="@font/normal_title_font"
                    android:gravity="center_vertical"
                    android:text="@string/sport"/>
                <CheckBox
                    android:id="@+id/cb_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="0dp"
                    android:checked="true"
                    android:buttonTint="@color/black"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:background="@drawable/table_cell_backg"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="1"/>
            <EditText
                android:id="@+id/et_sport"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLength="5"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:padding="@dimen/_2sdp"
                android:hint="@string/_0_0"
                android:maxLines="1"
                android:background="@drawable/table_cell_backg"
                android:layout_weight="1"
                android:text=""/>
        </TableRow>
        <TableRow
            android:paddingVertical="@dimen/_10sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_constant"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/résultat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white_constant"
                />
            <TextView
                android:id="@+id/tv_result_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_constant"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="@dimen/_12ssp"
                />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>